# TeamPerformanceHub

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  requirments.txt
backend/app/: .env.example  analytics.py  llm_analyzer.py  main.py
backend/app/models/: signals.py
backend/src/domain/: analytics.py  llm_analyzer.py  user_mapper.py
backend/src/infrastructure/: cache.py  http_session.py  progress_logger.py  project_manager.py
backend/src/infrastructure/config/: settings.py
backend/src/interfaces/api/routes/: __init__.py  _helpers.py  health.py  overview.py  projects.py  team.py
backend/src/interfaces/api/schemas/: response.py
frontend/: app.js  index.html  styles.css
